close() dropdown on load to make sure it is hidden Otherwise, dropdown may be visible if copyClassesToDropdown=true and class has a display:block property re: https://github.com/orchidjs/tom-select/commit/11400eecfcf74b470e4692ce1a6fab8b6a7c1636#diff-a5b86ab78740a77920c9adb8e6fbccfab70018b535d22a39d2f2b91d5bd1c21aL466

--- a/src/scss/_dropdown.scss
+++ b/src/scss/_dropdown.scss
@@ -6,7 +6,6 @@
 	left: 0;
 	width: 100%;
 	z-index: 10;
-	display: none;
 
 	border: $select-dropdown-border;
 	background: $select-color-dropdown;
